k8spspallowprivilegeescalationcontainer.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spspallowprivilegeescalationcontainer
spec:
  crd:
    spec:
      names:
        kind: K8sPSPAllowPrivilegeEscalationContainer
      validation:
        openAPIV3Schema:
          properties:
            exemption:
              items:
                type: string
              type: array
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspallowprivilegeescalationcontainer

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.allowPrivilegeEscalation == true
          not is_exempt(container.name)
          msg := sprintf("Container %v allows privilege escalation", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          container.securityContext.allowPrivilegeEscalation == true
          not is_exempt(container.name)
          msg := sprintf("Init container %v allows privilege escalation", [container.name])
        }

        is_exempt(containerName) {
          exemption := input.parameters.exemption[_]
          exemption == containerName
        }
