k8spspprivilegedcontainer.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spspprivilegedcontainer
spec:
  crd:
    spec:
      names:
        kind: K8sPSPPrivilegedContainer
      validation:
        openAPIV3Schema:
          properties:
            exemption:
              items:
                type: string
              type: array
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspprivilegedcontainer

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          not is_exempt(container.name)
          msg := sprintf("Container %v runs with privileged=true", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          container.securityContext.privileged == true
          not is_exempt(container.name)
          msg := sprintf("Init container %v runs with privileged=true", [container.name])
        }

        is_exempt(containerName) {
          exemption := input.parameters.exemption[_]
          exemption == containerName
        }
