selinux-must-be-defined.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPSelinux
metadata:
  name: require-selinux-options
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "gatekeeper-system"]
  parameters:
    exemption: []
